--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
     line-height: 24px;
     color: #000000;
     background-color: #ffffff;
+    min-width: 1200px;
 }
 
 h1{
@@ -85,10 +86,6 @@ h3{
     fill: #e5e5e5;
 }
 
-.card_product svg{
-/*    display: block*/
-}
-
 .button{
     color: #ffffff;
     border: none;
@@ -120,7 +117,6 @@ h3{
 
 .main_header{
     background-color: #eeeeee;
-    min-height: 1200px;
 }
 
 .main_navigation{
